added drop down menu

--- a/basketbit.conf
+++ b/basketbit.conf
@@ -3,7 +3,7 @@
     "dynamicFiles" : ["index","products"],
     "fileOrder" : ["header1.txt", "header2.txt", "*.body", "footer.txt"],
     "fileExtension" : "html",
-    "inputDirectory" : "/home/schnet/src/basketbit.com",
+    "inputDirectory" : "",
     "outputDirectory" : "/opt/www/basketbit",
     "strict" : false,
     "verbose" : false
