adding more web content

--- a/website.conf
+++ b/website.conf
@@ -1,7 +1,8 @@
 {
     "website" : "http://www.basketbit.com",
-    "dynamicFiles" : ["index","products"],
+    "dynamicFiles" : ["index","owlhours","filetemplater"],
     "fileOrder" : ["header1.txt", "header2.txt", "*.body", "footer.txt"],
+    "additionalFiles" : ["layout.css", "images"],
     "fileExtension" : "html",
     "inputDirectory" : "",
     "outputDirectory" : "/opt/www/basketbit",
