--- a/basketbit.conf
+++ b/basketbit.conf
@@ -4,7 +4,7 @@
     "fileOrder" : ["header1.txt", "header2.txt", "*.body", "footer.txt"],
     "additionalFiles" : ["layout.css", "images"],
     "fileExtension" : "html",
-    "inputDirectory" : "",
+    "inputDirectory" : "basketbit",
     "outputDirectory" : "/opt/www/basketbit",
     "strict" : false,
     "verbose" : false
