Added new logo. Edited some pages

--- a/basketbit.conf
+++ b/basketbit.conf
@@ -1,6 +1,6 @@
 {
     "website" : "http://www.basketbit.com",
-    "dynamicFiles" : ["index","owlhours","filetemplater"],
+    "dynamicFiles" : ["index","filetemplater", "minibit"],
     "fileOrder" : ["header1.txt", "header2.txt", "*.body", "footer.txt"],
     "additionalFiles" : ["layout.css", "images"],
     "fileExtension" : "html",
